# xo-cmake-boilerplate

./: Build_Windows_x64.ps1  Build_Windows_x86.ps1  CMakeLists.txt  Generate_Windows_x64.ps1  Package_Windows_x64.ps1  Package_Windows_x86.ps1  REANAME_BOILERPLATE.ps1  readme.md
.github/workflows/: package.yml
ProjectName/DynamicLibName/: CMakeLists.txt
ProjectName/DynamicLibName/Include/DynamicLibName/: api.h
ProjectName/DynamicLibName/Source/: api.cpp  api_internal.h
ProjectName/ExecutableName/: CMakeLists.txt
ProjectName/ExecutableName/Source/: main.cpp
Tools/Windows/Powershell/: Build.psm1  FindCmake.psm1  Generate.psm1  Package.psm1  REANAME_BOILERPLATE.ps1
